Fix header components alignment & font size

--- a/sources/components/custom-styles/template-cs-style-rules.scss
+++ b/sources/components/custom-styles/template-cs-style-rules.scss
@@ -940,7 +940,8 @@ body {
     }
 
     @include query($tablet-1) {
-      font-size: 24px;
+      font-size: 18px;
+      line-height: 18px;
     }
   }
 
