--- a/sources/stylesheets/components/_header.scss
+++ b/sources/stylesheets/components/_header.scss
@@ -72,8 +72,10 @@
 
       .header_title {
         width: 60%;
-        justify-content: center;
         text-align: center;
+        min-height: 24px;
+        align-items: center;
+        display: flex;
 
         h1,h2,h3,h4,h5,h6,p {
           text-align: center;
